--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
   }
 }
 
-header {
-  /* margin: 0 30px; */
+header img {
+  border-radius: 4px;
 }
 
 @media (max-width: 472px) {
@@ -84,6 +84,7 @@ main {
   margin-bottom: 24px;
   font-size: 32px;
   font-weight: 600;
+  max-width: 405px;
 }
 
 .descriptionText {
